
PIG-4028: add a flag to control the ivy resolve/retrieve output (gkesavan via daijy)

PIG-4015: Provide a way to disable auto-parallism in tez (daijy)

PIG-3846: Implement automatic reducer parallelism (daijy)

PIG-3939: SPRINTF function to format strings using a printf-style template (mrflip via cheolsoo)

PIG-3970: Merge Tez branch into trunk (daijy)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-4170: Multiquery with different type of key gives wrong result (daijy)

PIG-4104: Accumulator UDF throws OOM in Tez (rohini)

PIG-4169: NPE in ConstantCalculator (cheolsoo)

PIG-4161: check for latest Hive snapshot dependencies (daijy)

PIG-4102: Adding e2e tests and several improvements for Orc predicate pushdown (daijy)

PIG-4156: [PATCH] fix NPE when running scripts stored on hdfs:// (acoliver via daijy)

PIG-4159: TestGroupConstParallelTez and TestJobSubmissionTez should be excluded in Hadoop 20 unit tests (cheolsoo)

PIG-4154: ScriptState#setScript(File) does not close resources (lars_francke via daijy)

PIG-4155: Quitting grunt shell using CTRL-D character throws exception (abhishek.agarwal via daijy)

PIG-4157: Pig compilation failure due to HIVE-7208 (daijy)

PIG-4158: TestAssert is broken in trunk (cheolsoo)

PIG-4143: Port more mini cluster tests to Tez - part 7 (daijy)

PIG-4149: Rounding issue in FindQuantiles (daijy)

PIG-4145: Port local mode tests to Tez - part1 (daijy)

PIG-4076: Fix pom file (daijy)

PIG-4140: VertexManagerEvent.getUserPayload returns ReadOnlyBuffer after TEZ-1449 (daijy)

PIG-4136: No special handling jythonjar/jrubyjar in e2e tests after PIG-4047 (daijy)

PIG-4137: Fix hadoopversion 23 compilation due to TEZ-1469 (daijy)

PIG-4135: Fetch optimization should be disabled if plan contains no limit (cheolsoo)

PIG-4061: Make Streaming UDF work in Tez (hotfix PIG-4061-3.patch)

PIG-4134: TEZ-1449 broke the build (knoguchi)

PIG-4132: TEZ-1246 and TEZ-1390 broke a build (knoguchi)

PIG-4129: Pig -Dhadoopversion=23 compile fail after TEZ-1426 (daijy)
