@@ -43,6 +43,11 @@ public class PigImplConstants {
     public static final String CONVERTED_TO_LOCAL = "pig.job.converted.local";
 
     /**
+     * Used by pig to indicate that current job has been converted to run in fetch mode
+     */
+    public static final String CONVERTED_TO_FETCH = "pig.job.converted.fetch";
+
+    /**
      * Indicate the split index of the task. Used by merge cogroup
      */
     public static final String PIG_SPLIT_INDEX = "pig.split.index";
